moved emane dependent tests into subdir, moved pytest config into setup.cfg, added CoreError and made use of in session.py

--- a/daemon/Pipfile
+++ b/daemon/Pipfile
@@ -5,6 +5,7 @@ verify_ssl = true
 
 [scripts]
 coredev = "python scripts/core-daemon -f data/core.conf -l data/logging.conf"
+coretest = "python -m pytest -v tests"
 
 [dev-packages]
 grpcio-tools = "*"
