--- a/coretk/Pipfile
+++ b/coretk/Pipfile
@@ -3,10 +3,13 @@ name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
 
+[scripts]
+coretk = "python coretk/app.py"
+
 [dev-packages]
 flake8 = "*"
 isort = "*"
 black = "==19.3b0"
 
 [packages]
-pillow = "*"
+coretk = {editable = true,path = "."}
