--- a/.github/workflows/daemon-checks.yml
+++ b/.github/workflows/daemon-checks.yml
@@ -16,6 +16,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install pipenv
           cd daemon
+          cp setup.py.in setup.py
           pipenv install --dev
       - name: isort
         run: |
