gh action - update isort to only check

--- a/.github/workflows/daemon-checks.yml
+++ b/.github/workflows/daemon-checks.yml
@@ -21,7 +21,7 @@ jobs:
       - name: isort
         run: |
           cd daemon
-          pipenv run isort
+          pipenv run isort -c
       - name: black
         run: |
           cd daemon
