added python path change to ns3 and simplified substitution, which is not version dependent

--- a/ns3/Makefile.am
+++ b/ns3/Makefile.am
@@ -9,11 +9,7 @@
 
 if WANT_PYTHON
 
-if PYTHON3
-PYTHONLIBDIR=$(libdir)/python3/dist-packages
-else
-PYTHONLIBDIR=$(pythondir)
-endif
+PYTHONLIBDIR=$(subst site-packages,dist-packages,$(pythondir))
 
 SETUPPY	= setup.py
 SETUPPYFLAGS = -v
