added ethtool to configure.ac, updated other program checks to fail when not found and required

--- a/configure.ac
+++ b/configure.ac
@@ -123,32 +123,55 @@ if test "x$enable_daemon" = "xyes"; then
   if test "x$brctl_path" = "xno" ; then
     AC_MSG_ERROR([Could not locate brctl (from bridge-utils package).])
   fi
+
   AC_CHECK_PROG(sysctl_path, sysctl, $as_dir, no, $SEARCHPATH)
+  if test "x$sysctl_path" = "xno" ; then
+    AC_MSG_ERROR([Could not locate sysctl (from procps package).])
+  fi
+
   AC_CHECK_PROG(ebtables_path, ebtables, $as_dir, no, $SEARCHPATH)
   if test "x$ebtables_path" = "xno" ; then
     AC_MSG_ERROR([Could not locate ebtables (from ebtables package).])
   fi
+
   AC_CHECK_PROG(ip_path, ip, $as_dir, no, $SEARCHPATH)
   if test "x$ip_path" = "xno" ; then
     AC_MSG_ERROR([Could not locate ip (from iproute package).])
   fi
+
   AC_CHECK_PROG(tc_path, tc, $as_dir, no, $SEARCHPATH)
   if test "x$tc_path" = "xno" ; then
     AC_MSG_ERROR([Could not locate tc (from iproute package).])
   fi
+
+  AC_CHECK_PROG(ethtool_path, ethtool, $as_dir, no, $SEARCHPATH)
+  if test "x$ethtool_path" = "xno" ; then
+    AC_MSG_ERROR([Could not locate ethtool (from package ethtool)])
+  fi
+
   AC_CHECK_PROG(mount_path, mount, $as_dir, no, $SEARCHPATH)
+  if test "x$mount_path" = "xno" ; then
+    AC_MSG_ERROR([Could not locate mount (from package mount)])
+  fi
+
   AC_CHECK_PROG(umount_path, umount, $as_dir, no, $SEARCHPATH)
+  if test "x$umount_path" = "xno" ; then
+    AC_MSG_ERROR([Could not locate umount (from package mount)])
+  fi
+
   AC_CHECK_PROG(convert, convert, yes, no, $SEARCHPATH)
   if test "x$convert" = "xno" ; then
     AC_MSG_WARN([Could not locate ImageMagick convert.])
   fi
+
   AC_CHECK_PROG(ovs_vs_path, ovs-vsctl, $as_dir, no, $SEARCHPATH)
   if test "x$ovs_vs_path" = "xno" ; then
-    AC_MSG_WARN([Could not locate ovs-vsctl cannot use OVS nodes])
+    AC_MSG_WARN([Could not locate ovs-vsctl cannot use OVS mode])
   fi
+
   AC_CHECK_PROG(ovs_of_path, ovs-ofctl, $as_dir, no, $SEARCHPATH)
   if test "x$ovs_of_path" = "xno" ; then
-    AC_MSG_WARN([Could not locate ovs-ofctl cannot use OVS nodes])
+    AC_MSG_WARN([Could not locate ovs-ofctl cannot use OVS mode])
   fi
 
   CFLAGS_save=$CFLAGS
