first pass at removing all python2 specific dependencies, updating python requirements.txt/setup.py/Pipfiles/Makefiles, and removing python2 compat imports

--- a/ns3/Makefile.am
+++ b/ns3/Makefile.am
@@ -9,8 +9,6 @@
 
 if WANT_PYTHON
 
-PYTHONLIBDIR=$(subst site-packages,dist-packages,$(pythondir))
-
 SETUPPY	= setup.py
 SETUPPYFLAGS = -v
 
@@ -24,15 +22,15 @@ install-exec-hook:
 	$(PYTHON) $(SETUPPY) $(SETUPPYFLAGS) install \
 		--root=/$(DESTDIR) \
 		--prefix=$(prefix) \
-		--install-lib=$(PYTHONLIBDIR) \
+		--install-lib=$(pythondir) \
 		--single-version-externally-managed \
 		--no-compile
 
 # Python package uninstall
 uninstall-hook:
 	-rm -rf core_ns3.egg-info
-	-rm -rf $(DESTDIR)/$(PYTHONLIBDIR)/core_ns3-$(PACKAGE_VERSION)-py$(PYTHON_VERSION).egg-info
-	-rm -rf $(DESTDIR)/$(PYTHONLIBDIR)/corens3
+	-rm -rf $(DESTDIR)/$(pythondir)/core_ns3-$(PACKAGE_VERSION)-py$(PYTHON_VERSION).egg-info
+	-rm -rf $(DESTDIR)/$(pythondir)/corens3
 	-rm -rf $(DESTDIR)/$(datadir)/corens3
 
 # Python package cleanup
