updated core.conf to contain distributed address and grpc configurations

--- a/daemon/data/core.conf
+++ b/daemon/data/core.conf
@@ -1,6 +1,9 @@
 [core-daemon]
+#distributed_address = 127.0.0.1
 listenaddr = localhost
 port = 4038
+grpcaddress = localhost
+grpcport = 50051
 numthreads = 1
 quagga_bin_search = "/usr/local/bin /usr/bin /usr/lib/quagga"
 quagga_sbin_search = "/usr/local/sbin /usr/sbin /usr/lib/quagga"
