adding mocked tests to github actions

--- a/.github/workflows/daemon-checks.yml
+++ b/.github/workflows/daemon-checks.yml
@@ -30,3 +30,7 @@ jobs:
         run: |
           cd daemon
           pipenv run flake8
+      - name: tests
+        run: |
+          cd daemon
+          pipenv run pytest -v --mock
