--- a/.github/workflows/coretk-checks.yml
+++ b/.github/workflows/coretk-checks.yml
@@ -15,7 +15,11 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pipenv
-          cd coretk
+          cd daemon
+          cp setup.py.in setup.py
+          cp core/constants.py.in core/constants.py
+          sed -i 's/True/False/g' core/constants.py
+          cd ../coretk
           pipenv install --dev
       - name: isort
         run: |
