--- a/daemon/requirements.txt
+++ b/daemon/requirements.txt
@@ -1,9 +1,15 @@
+bcrypt==3.1.7
+cffi==1.13.2
+cryptography==2.8
 fabric==2.5.0
-grpcio==1.23.0
-grpcio-tools==1.21.1
+grpcio==1.26.0
 invoke==1.3.0
-lxml==4.4.1
+lxml==4.4.2
 netaddr==0.7.19
-Pillow==6.2.1
-protobuf==3.9.1
-PyYAML==5.2
+paramiko==2.7.1
+pillow==6.2.1
+protobuf==3.11.1
+pycparser==2.19
+pynacl==1.3.0
+pyyaml==5.2
+six==1.13.0
