fixed issues in zebra config service, updated config services to start and validate different modes appropriately, added service dependency startup for config services

--- a/daemon/core/configservices/quaggaservices/templates/Quagga.conf
+++ b/daemon/core/configservices/quaggaservices/templates/Quagga.conf
@@ -1,4 +1,4 @@
-% for ifc, ip4s, ip6s in interfaces:
+% for ifc, ip4s, ip6s, is_control in interfaces:
 interface ${ifc.name}
     % if want_ip4:
         % for addr in ip4s:
@@ -19,5 +19,5 @@ interface ${ifc.name}
 % endfor
 
 % for service in services:
-    ${service.quagga_config()}
+${service.quagga_config()}
 % endfor
