finished converting quagga services to config services

--- a/daemon/core/configservices/quaggaservices/templates/Quagga.conf
+++ b/daemon/core/configservices/quaggaservices/templates/Quagga.conf
@@ -10,9 +10,11 @@ interface ${ifc.name}
     ipv6 address ${addr}
         % endfor
     % endif
-    % if is_control:
+    % if not is_control:
         % for service in services:
-    ${service.quagga_interface_config(ifc)}
+            % for line in service.quagga_interface_config(ifc).split("\n"):
+    ${line}
+            % endfor
         % endfor
     % endif
 !
