systemd: fix unit file install path
The proper location for unit files is /usr/lib/systemd/system,
with /etc/systemd/system reserved for local overrides of default
package settings.

Signed-off-by: Gabriel Somlo <gsomlo@gmail.com>

--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -22,7 +22,7 @@ startupdir	= /etc/init.d
 startup_SCRIPTS	= core-daemon
 endif
 if WANT_SYSTEMD
-startupdir	= /etc/systemd/system
+startupdir	= /usr/lib/systemd/system
 startup_SCRIPTS	= core-daemon.service
 endif
 
