--- a/daemon/requirements.txt
+++ b/daemon/requirements.txt
@@ -3,13 +3,15 @@ cffi==1.13.2
 cryptography==2.8
 fabric==2.5.0
 grpcio==1.26.0
-invoke==1.3.0
+invoke==1.4.0
 lxml==4.4.2
+Mako==1.1.1
+MarkupSafe==1.1.1
 netaddr==0.7.19
 paramiko==2.7.1
-pillow==6.2.1
-protobuf==3.11.1
+Pillow==7.0.0
+protobuf==3.11.2
 pycparser==2.19
-pynacl==1.3.0
-pyyaml==5.2
-six==1.13.0
+PyNaCl==1.3.0
+PyYAML==5.3
+six==1.14.0
