--- a/daemon/setup.py.in
+++ b/daemon/setup.py.in
@@ -39,6 +39,7 @@ setup(
         "netaddr",
         "invoke",
         "lxml",
+        "mako",
         "pillow",
         "protobuf",
         "pyyaml",
