added configuration for loading custom config services

--- a/daemon/data/core.conf
+++ b/daemon/data/core.conf
@@ -14,6 +14,7 @@ frr_sbin_search = "/usr/local/sbin /usr/sbin /usr/lib/frr"
 # this may be a comma-separated list, and directory names should be unique
 # and not named 'services'
 #custom_services_dir = /home/username/.core/myservices
+#custom_config_services_dir = /home/username/.coretk/custom_services
 
 # uncomment to  establish a standalone control backchannel for accessing nodes
 # (overriden by the session option of the same name)
