--- a/daemon/requirements.txt
+++ b/daemon/requirements.txt
@@ -1,17 +1,18 @@
 bcrypt==3.1.7
-cffi==1.13.2
+cffi==1.14.0
 cryptography==2.8
 fabric==2.5.0
-grpcio==1.26.0
-invoke==1.4.0
-lxml==4.4.2
+grpcio==1.27.2
+invoke==1.4.1
+lxml==4.5.0
 Mako==1.1.1
 MarkupSafe==1.1.1
 netaddr==0.7.19
 paramiko==2.7.1
 Pillow==7.0.0
-protobuf==3.11.2
+protobuf==3.11.3
 pycparser==2.19
 PyNaCl==1.3.0
+pyproj==2.5.0
 PyYAML==5.3
 six==1.14.0
