tweak github action to sync pipenv and not install newer packages

--- a/.github/workflows/daemon-checks.yml
+++ b/.github/workflows/daemon-checks.yml
@@ -19,7 +19,7 @@ jobs:
           cp setup.py.in setup.py
           cp core/constants.py.in core/constants.py
           sed -i 's/True/False/g' core/constants.py
-          pipenv install --dev
+          pipenv sync --dev
       - name: isort
         run: |
           cd daemon
