--- a/daemon/setup.py.in
+++ b/daemon/setup.py.in
@@ -34,12 +34,13 @@ setup(
     version="@PACKAGE_VERSION@",
     packages=find_packages(),
     install_requires=[
+        "dataclasses",
         "fabric",
         "grpcio",
-        "netaddr",
         "invoke",
         "lxml",
         "mako",
+        "netaddr",
         "pillow",
         "protobuf",
         "pyproj",
