--- a/daemon/Pipfile
+++ b/daemon/Pipfile
@@ -5,7 +5,7 @@ verify_ssl = true
 
 [scripts]
 core = "python scripts/core-daemon -f data/core.conf -l data/logging.conf"
-coretk = "python scripts/coretk-gui"
+core-pygui = "python scripts/core-pygui"
 test = "pytest -v tests"
 test-mock = "pytest -v --mock tests"
 test-emane = "pytest -v tests/emane"
