pygui: some initial code for the possibility of displaying data using matplotlib graphs and even a live view example

--- a/daemon/setup.py.in
+++ b/daemon/setup.py.in
@@ -40,6 +40,7 @@ setup(
         "invoke",
         "lxml",
         "mako",
+        "matplotlib",
         "netaddr",
         "pillow",
         "protobuf",
