--- a/daemon/core/configservices/quaggaservices/templates/Quagga.conf
+++ b/daemon/core/configservices/quaggaservices/templates/Quagga.conf
@@ -1,5 +1,5 @@
-% for ifc, ip4s, ip6s, is_control in interfaces:
-interface ${ifc.name}
+% for iface, ip4s, ip6s, is_control in ifaces:
+interface ${iface.name}
     % if want_ip4:
         % for addr in ip4s:
     ip address ${addr}
@@ -12,7 +12,7 @@ interface ${ifc.name}
     % endif
     % if not is_control:
         % for service in services:
-            % for line in service.quagga_interface_config(ifc).split("\n"):
+            % for line in service.quagga_iface_config(iface).split("\n"):
     ${line}
             % endfor
         % endfor
