removed references to building and dealing with service files, as that will now be limited to the invoke task

--- a/Makefile.am
+++ b/Makefile.am
@@ -11,7 +11,7 @@ if WANT_GUI
 endif
 
 if WANT_DAEMON
-  DAEMON = scripts daemon
+  DAEMON = daemon
 endif
 
 if WANT_NETNS
@@ -124,8 +124,6 @@ all: change-files
 .PHONY: change-files
 change-files:
 	$(call change-files,gui/core-gui)
-	$(call change-files,scripts/core-daemon.service)
-	$(call change-files,scripts/core-daemon)
 	$(call change-files,daemon/core/constants.py)
 	$(call change-files,netns/setup.py)
 	$(call change-files,daemon/setup.py)
