--- a/daemon/pyproject.toml
+++ b/daemon/pyproject.toml
@@ -2,7 +2,7 @@
 name = "core"
 version = "6.6.0"
 description = "CORE Common Open Research Emulator"
-authors = ["Boeing Research & Technology"]
+authors = ["Boeing Research and Technology"]
 license = "BSD-2-Clause"
 repository = "https://github.com/coreemu/core"
 documentation = "https://coreemu.github.io/core/"
