removed daemon MANIFEST.in, poetry will provide

--- a/daemon/pyproject.toml
+++ b/daemon/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["Boeing Research and Technology"]
 license = "BSD-2-Clause"
 repository = "https://github.com/coreemu/core"
 documentation = "https://coreemu.github.io/core/"
+include = ["core/gui/data/**/*", "core/configservices/*/templates"]
 
 [tool.poetry.dependencies]
 python = "^3.6"
