--- a/daemon/setup.cfg
+++ b/daemon/setup.cfg
@@ -2,7 +2,7 @@
 test=pytest
 
 [isort]
-skip_glob=*_pb2*.py,utm.py,doc,build
+skip_glob=*_pb2*.py,doc,build
 multi_line_output=3
 include_trailing_comma=True
 force_grid_wrap=0
@@ -14,7 +14,7 @@ ignore=E501,W503,E203
 max-line-length=88
 max-complexity=26
 select=B,C,E,F,W,T4
-exclude=*_pb2*.py,utm.py,doc,build
+exclude=*_pb2*.py,doc,build
 
 [tool:pytest]
 norecursedirs=distributed emane
