--- a/.github/workflows/daemon-checks.yml
+++ b/.github/workflows/daemon-checks.yml
@@ -26,7 +26,7 @@ jobs:
       - name: black
         run: |
           cd daemon
-          poetry run black --check --exclude ".+_pb2.*.py|doc|build|utm\.py|setup\.py" .
+          poetry run black --check --exclude ".+_pb2.*.py|doc|build" .
       - name: flake8
         run: |
           cd daemon
