--- a/daemon/pyproject.toml
+++ b/daemon/pyproject.toml
@@ -31,6 +31,14 @@ mock = "*"
 pre-commit = "*"
 pytest = "*"
 
+[tool.isort]
+skip_glob = "*_pb2*.py,doc,build"
+multi_line_output = 3
+include_trailing_comma = "True"
+force_grid_wrap = 0
+use_parentheses = "True"
+line_length = 88
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
