--- a/daemon/.pre-commit-config.yaml
+++ b/daemon/.pre-commit-config.yaml
@@ -12,7 +12,7 @@ repos:
     name: black
     stages: [commit]
     language: system
-    entry: bash -c 'cd daemon && poetry run black --exclude ".+_pb2.*.py|doc|build" .'
+    entry: bash -c 'cd daemon && poetry run black .'
     types: [python]
 
   - id: flake8
