set dependencies to currently known working versions to help avoid possibilities for unaccounted cases

--- a/daemon/pyproject.toml
+++ b/daemon/pyproject.toml
@@ -11,25 +11,25 @@ include = ["core/gui/data/**/*", "core/configservices/*/templates"]
 [tool.poetry.dependencies]
 python = "^3.6"
 dataclasses = { version = "*", python = "~3.6" }
-fabric = "*"
+fabric = "2.5.0"
 grpcio = "1.27.2"
-invoke = "*"
-lxml = "*"
-mako = "*"
-netaddr = "*"
-pillow = "*"
-protobuf = "*"
-pyproj = "*"
-pyyaml = "*"
+invoke = "1.4.1"
+lxml = "4.5.1"
+mako = "1.1.3"
+netaddr = "0.7.19"
+pillow = "7.1.2"
+protobuf = "3.12.2"
+pyproj = "2.6.1.post1"
+pyyaml = "5.3.1"
 
 [tool.poetry.dev-dependencies]
 black = "==19.3b0"
-flake8 = "*"
+flake8 = "3.8.2"
 grpcio-tools = "1.27.2"
-isort = "*"
-mock = "*"
-pre-commit = "*"
-pytest = "*"
+isort = "4.3.21"
+mock = "4.0.2"
+pre-commit = "2.1.1"
+pytest = "5.4.3"
 
 [tool.isort]
 skip_glob = "*_pb2*.py,doc,build"
