--- a/daemon/core/constants.py.in
+++ b/daemon/core/constants.py.in
@@ -1,3 +1,5 @@
-COREDPY_VERSION = "@PACKAGE_VERSION@"
-CORE_CONF_DIR = "@CORE_CONF_DIR@"
-CORE_DATA_DIR = "@CORE_DATA_DIR@"
+from pathlib import Path
+
+COREDPY_VERSION: str = "@PACKAGE_VERSION@"
+CORE_CONF_DIR: Path = Path("@CORE_CONF_DIR@")
+CORE_DATA_DIR: Path = Path("@CORE_DATA_DIR@")
