updates to python based logging to use module named loggers, updated logging config file to align with these changes

--- a/daemon/data/logging.conf
+++ b/daemon/data/logging.conf
@@ -13,8 +13,11 @@
 			"format": "%(asctime)s - %(levelname)s - %(module)s:%(funcName)s - %(message)s"
 		}
 	},
-	"root": {
-		"level": "INFO",
-		"handlers": ["console"]
-	}
+	"loggers": {
+        "core": {
+            "level": "INFO",
+            "handlers": ["console"],
+            "propagate": false
+        }
+    }
 }
