--- a/daemon/data/logging.conf
+++ b/daemon/data/logging.conf
@@ -14,6 +14,11 @@
 		}
 	},
 	"loggers": {
+	    "": {
+	        "level": "WARNING",
+            "handlers": ["console"],
+            "propagate": false
+        },
         "core": {
             "level": "INFO",
             "handlers": ["console"],
