added default logging configuration for __main__ scripts

--- a/daemon/data/logging.conf
+++ b/daemon/data/logging.conf
@@ -23,6 +23,11 @@
             "level": "INFO",
             "handlers": ["console"],
             "propagate": false
+        },
+        "__main__": {
+            "level": "INFO",
+            "handlers": ["console"],
+            "propagate": false
         }
     }
 }
