services: fix missing configurations for ospfv2 in config services

--- a/daemon/core/configservices/quaggaservices/templates/usr/local/etc/quagga/Quagga.conf
+++ b/daemon/core/configservices/quaggaservices/templates/usr/local/etc/quagga/Quagga.conf
@@ -1,4 +1,4 @@
-% for iface, ip4s, ip6s, is_control in ifaces:
+% for iface, ip4s, ip6s, configs in ifaces:
 interface ${iface.name}
     % if want_ip4:
         % for addr in ip4s:
@@ -10,13 +10,11 @@ interface ${iface.name}
     ipv6 address ${addr}
         % endfor
     % endif
-    % if not is_control:
-        % for service in services:
-            % for line in service.quagga_iface_config(iface).split("\n"):
+    % for config in configs:
+        % for line in config:
     ${line}
-            % endfor
         % endfor
-    % endif
+    % endfor
 !
 % endfor
 
