daemon: updated core.conf to change .core references to .coregui

--- a/daemon/data/core.conf
+++ b/daemon/data/core.conf
@@ -12,8 +12,8 @@ frr_sbin_search = "/usr/local/sbin /usr/sbin /usr/lib/frr"
 # uncomment the following line to load custom services from the specified dir
 # this may be a comma-separated list, and directory names should be unique
 # and not named 'services'
-#custom_services_dir = /home/username/.core/myservices
-#custom_config_services_dir = /home/username/.coregui/custom_services
+#custom_services_dir = /home/<user>/.coregui/custom_services
+#custom_config_services_dir = /home/<user>/.coregui/custom_services
 
 # uncomment to  establish a standalone control backchannel for accessing nodes
 # (overriden by the session option of the same name)
@@ -48,7 +48,7 @@ emane_platform_port = 8101
 emane_transform_port = 8201
 emane_event_generate = True
 emane_event_monitor = False
-#emane_models_dir = /home/username/.core/myemane
+#emane_models_dir = /home/<user>/.coregui/custom_emane
 # EMANE log level range [0,4] default: 2
 #emane_log_level = 2
 emane_realtime = True
