--- a/daemon/pyproject.toml
+++ b/daemon/pyproject.toml
@@ -26,7 +26,7 @@ mako = "1.1.3"
 netaddr = "0.7.19"
 pillow = "8.3.2"
 protobuf = "3.19.4"
-pyproj = "2.6.1.post1"
+pyproj = "3.0.1"
 pyyaml = "5.4"
 
 [tool.poetry.dev-dependencies]
