install: updates to support building deb/rpm packages that contain python wheels and install core from a single file, updates to core to install scripts by way of python directly

--- a/Makefile.am
+++ b/Makefile.am
@@ -21,6 +21,7 @@ ACLOCAL_AMFLAGS = -I config
 
 # extra files to include with distribution tarball
 EXTRA_DIST = bootstrap.sh \
+		 package \
 	     LICENSE \
 	     README.md \
 	     ASSIGNMENT_OF_COPYRIGHT.pdf \
@@ -47,7 +48,7 @@ fpm -s dir -t deb -n core-distributed \
 	--description "Common Open Research Emulator Distributed Package" \
 	--url https://github.com/coreemu/core \
 	--vendor "$(PACKAGE_VENDOR)" \
-	-p core_distributed_VERSION_ARCH.deb \
+	-p core-distributed_VERSION_ARCH.deb \
 	-v $(PACKAGE_VERSION) \
 	-d "ethtool" \
 	-d "procps" \
@@ -58,7 +59,8 @@ fpm -s dir -t deb -n core-distributed \
 	-d "libev4" \
 	-d "openssh-server" \
 	-d "xterm" \
-	-C $(DESTDIR)
+	netns/vnoded=/usr/bin/ \
+	netns/vcmd=/usr/bin/
 endef
 
 define fpm-distributed-rpm =
@@ -68,7 +70,7 @@ fpm -s dir -t rpm -n core-distributed \
 	--description "Common Open Research Emulator Distributed Package" \
 	--url https://github.com/coreemu/core \
 	--vendor "$(PACKAGE_VENDOR)" \
-	-p core_distributed_VERSION_ARCH.rpm \
+	-p core-distributed_VERSION_ARCH.rpm \
 	-v $(PACKAGE_VERSION) \
 	-d "ethtool" \
 	-d "procps-ng" \
@@ -79,12 +81,75 @@ fpm -s dir -t rpm -n core-distributed \
 	-d "net-tools" \
 	-d "openssh-server" \
 	-d "xterm" \
-	-C $(DESTDIR)
+	netns/vnoded=/usr/bin/ \
+	netns/vcmd=/usr/bin/
 endef
 
-.PHONY: fpm-distributed
-fpm-distributed: clean-local-fpm
-	$(MAKE) -C netns install DESTDIR=$(DESTDIR)
+define fpm-rpm =
+fpm -s dir -t rpm -n core \
+	-m "$(PACKAGE_MAINTAINERS)" \
+	--license "BSD" \
+	--description "core vnoded/vcmd and system dependencies" \
+	--url https://github.com/coreemu/core \
+	--vendor "$(PACKAGE_VENDOR)" \
+	-p core_VERSION_ARCH.rpm \
+	-v $(PACKAGE_VERSION) \
+	--rpm-init package/core-daemon \
+	--after-install package/after-install.sh \
+	--after-remove package/after-remove.sh \
+	-d "ethtool" \
+	-d "tk" \
+	-d "procps-ng" \
+	-d "bash >= 3.0" \
+	-d "ebtables" \
+	-d "iproute" \
+	-d "libev" \
+	-d "net-tools" \
+	-d "nftables" \
+	netns/vnoded=/usr/bin/ \
+	netns/vcmd=/usr/bin/ \
+	package/etc/core.conf=/etc/core/ \
+	package/etc/logging.conf=/etc/core/ \
+	package/examples=/opt/core/ \
+	daemon/dist/core-$(PACKAGE_VERSION)-py3-none-any.whl=/opt/core/
+endef
+
+define fpm-deb =
+fpm -s dir -t deb -n core \
+	-m "$(PACKAGE_MAINTAINERS)" \
+	--license "BSD" \
+	--description "core vnoded/vcmd and system dependencies" \
+	--url https://github.com/coreemu/core \
+	--vendor "$(PACKAGE_VENDOR)" \
+	-p core_VERSION_ARCH.deb \
+	-v $(PACKAGE_VERSION) \
+	--deb-systemd package/core-daemon.service \
+	--deb-no-default-config-files \
+	--after-install package/after-install.sh \
+	--after-remove package/after-remove.sh \
+	-d "ethtool" \
+	-d "tk" \
+	-d "libtk-img" \
+	-d "procps" \
+	-d "libc6 >= 2.14" \
+	-d "bash >= 3.0" \
+	-d "ebtables" \
+	-d "iproute2" \
+	-d "libev4" \
+	-d "nftables" \
+	netns/vnoded=/usr/bin/ \
+	netns/vcmd=/usr/bin/ \
+	package/etc/core.conf=/etc/core/ \
+	package/etc/logging.conf=/etc/core/ \
+	package/examples=/opt/core/ \
+	daemon/dist/core-$(PACKAGE_VERSION)-py3-none-any.whl=/opt/core/
+endef
+
+.PHONY: fpm
+fpm: clean-local-fpm
+	cd daemon && poetry build -f wheel
+	$(call fpm-deb)
+	$(call fpm-rpm)
 	$(call fpm-distributed-deb)
 	$(call fpm-distributed-rpm)
 
