--- a/daemon/pyproject.toml
+++ b/daemon/pyproject.toml
@@ -36,16 +36,14 @@ pyyaml = "5.4"
 Pillow = "9.2.0"
 Mako = "1.2.3"
 
-[tool.poetry.dev-dependencies]
-black = "==19.3b0"
+[tool.poetry.group.dev.dependencies]
+pytest = "6.2.5"
+grpcio-tools = "1.49.1"
+black = "22.12.0"
 flake8 = "3.8.2"
 isort = "4.3.21"
 mock = "4.0.2"
 pre-commit = "2.1.1"
-
-[tool.poetry.group.dev.dependencies]
-pytest = "6.2.5"
-grpcio-tools = "1.49.1"
 
 [tool.isort]
 skip_glob = "*_pb2*.py,doc,build"
