--- a/dockerfiles/Dockerfile.centos
+++ b/dockerfiles/Dockerfile.centos
@@ -2,40 +2,51 @@
 FROM centos:7
 LABEL Description="CORE Docker CentOS Image"
 
-# define variables
 ARG PREFIX=/usr
 ARG BRANCH=master
-
-# define environment
-ENV DEBIAN_FRONTEND=noninteractive
 ENV LANG en_US.UTF-8
+ARG PROTOC_VERSION=3.19.6
+ARG VENV_PATH=/opt/core/venv
+ENV PATH="$PATH:${VENV_PATH}/bin"
+WORKDIR /opt
 
-# install basic dependencies
+# install system dependencies
 RUN yum -y update && \
-    yum install -y git sudo wget tzdata unzip
+    yum install -y \
+    git \
+    sudo \
+    wget \
+    tzdata \
+    unzip \
+    libpcap-devel \
+    libpcre3-devel \
+    libxml2-devel \
+    protobuf-devel \
+    unzip \
+    uuid-devel \
+    tcpdump \
+    make && \
+    yum-builddep -y python3 && \
+    yum autoremove -y
 
 # install python3.9
-WORKDIR /opt
-RUN wget https://www.python.org/ftp/python/3.9.15/Python-3.9.15.tgz
-RUN tar xf Python-3.9.15.tgz
-RUN yum install -y make && yum-builddep -y python3
-RUN cd Python-3.9.15 && \
-  ./configure --enable-optimizations --with-ensurepip=install && \
-  make -j$(nproc) altinstall
-RUN python3.9 -m pip install --upgrade pip
+RUN wget https://www.python.org/ftp/python/3.9.15/Python-3.9.15.tgz && \
+    tar xf Python-3.9.15.tgz && \
+    cd Python-3.9.15 && \
+    ./configure --enable-optimizations --with-ensurepip=install && \
+    make -j$(nproc) altinstall && \
+    python3.9 -m pip install --upgrade pip && \
+    cd /opt && \
+    rm -rf Python-3.9.15
 
 # install core
-WORKDIR /opt
-RUN git clone https://github.com/coreemu/core
-WORKDIR /opt/core
-RUN git checkout ${BRANCH}
-RUN PYTHON=/usr/local/bin/python3.9 ./setup.sh
-RUN . /root/.bashrc && PYTHON=/usr/local/bin/python3.9 inv install -v -p ${PREFIX} --no-python
-ENV PATH "$PATH:/opt/core/venv/bin"
+RUN git clone https://github.com/coreemu/core && \
+    cd core && \
+    git checkout ${BRANCH} && \
+    PYTHON=/usr/local/bin/python3.9 ./setup.sh && \
+    . /root/.bashrc && PYTHON=/usr/local/bin/python3.9 inv install -v -p ${PREFIX} --no-python
 
 # install emane
-RUN yum install -y libpcap-devel libpcre3-devel libxml2-devel protobuf-devel unzip uuid-devel
-WORKDIR /opt
 RUN wget -q https://adjacentlink.com/downloads/emane/emane-1.3.3-release-1.el7.x86_64.tar.gz && \
     tar xf emane-1.3.3-release-1.el7.x86_64.tar.gz && \
     cd emane-1.3.3-release-1/rpms/el7/x86_64 && \
@@ -45,18 +56,21 @@ RUN wget -q https://adjacentlink.com/downloads/emane/emane-1.3.3-release-1.el7.x
     rm emane-1.3.3-release-1.el7.x86_64.tar.gz && \
     rm -rf emane-1.3.3-release-1
 
-RUN wget https://github.com/protocolbuffers/protobuf/releases/download/v3.19.6/protoc-3.19.6-linux-x86_64.zip && \
+# install emane python bindings
+RUN wget https://github.com/protocolbuffers/protobuf/releases/download/v${PROTOC_VERSION}/protoc-${PROTOC_VERSION}-linux-x86_64.zip && \
     mkdir protoc && \
-    unzip protoc-3.19.6-linux-x86_64.zip -d protoc
-RUN git clone https://github.com/adjacentlink/emane.git
-RUN PATH=/opt/protoc/bin:$PATH && \
-  cd emane && \
-  git checkout v1.3.3 && \
-  ./autogen.sh && \
-  PYTHON=/opt/core/venv/bin/python ./configure --prefix=/usr && \
-  cd src/python && \
-  make && \
-  /opt/core/venv/bin/python -m pip install .
+    unzip protoc-${PROTOC_VERSION}-linux-x86_64.zip -d protoc && \
+    git clone https://github.com/adjacentlink/emane.git && \
+    cd emane && \
+    git checkout v1.3.3 && \
+    ./autogen.sh && \
+    PYTHON=${VENV_PATH}/bin/python ./configure --prefix=/usr && \
+    cd src/python && \
+    PATH=/opt/protoc/bin:$PATH make && \
+    ${VENV_PATH}/bin/python -m pip install . && \
+    cd /opt && \
+    rm -rf protoc && \
+    rm -rf emane && \
+    rm -f protoc-${PROTOC_VERSION}-linux-x86_64.zip
 
-# run daemon
-CMD ["core-daemon"]
+WORKDIR /root
