--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,17 +40,18 @@ nav:
       - CentOS: install_centos.md
   - Detailed Topics:
       - GUI: gui.md
-      - API:
-          - Python: python.md
-          - gRPC: grpc.md
-      - Services:
-          - Config Services: configservices.md
-          - Services (Deprecated): services.md
-      - EMANE: emane.md
       - Node Types:
           - Overview: nodetypes.md
           - Docker: docker.md
           - LXC: lxc.md
+      - Services:
+          - Config Services: configservices.md
+          - Services (Deprecated): services.md
+      - API:
+          - Python: python.md
+          - gRPC: grpc.md
       - Distributed: distributed.md
       - Control Network: ctrlnet.md
+      - Hardware In The Loop: hitl.md
+      - EMANE: emane.md
   - Developers Guide: devguide.md
