docs: added tutorial 5

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,6 +43,7 @@ nav:
       - Setup: tutorials/setup.md
       - Tutorial 1: tutorials/tutorial1.md
       - Tutorial 4: tutorials/tutorial4.md
+      - Tutorial 5: tutorials/tutorial5.md
       - Tutorial 6: tutorials/tutorial6.md
       - Tutorial 7: tutorials/tutorial7.md
   - Detailed Topics:
