--- a/daemon/pyproject.toml
+++ b/daemon/pyproject.toml
@@ -35,6 +35,7 @@ pyproj = "3.3.1"
 pyyaml = "5.4"
 Pillow = "9.4.0"
 Mako = "1.2.3"
+PyYAML = "5.4.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "6.2.5"
