--- a/dockerfiles/Dockerfile.ubuntu
+++ b/dockerfiles/Dockerfile.ubuntu
@@ -35,8 +35,7 @@ RUN git clone https://github.com/coreemu/core && \
     cd core && \
     git checkout ${BRANCH} && \
     ./setup.sh && \
-    . /root/.bashrc && \
-    inv install -v -p ${PREFIX} && \
+    PATH=/root/.local/bin:$PATH inv install -v -p ${PREFIX} && \
     cd /opt && \
     rm -rf ospf-mdr
 
