--- a/dockerfiles/Dockerfile.centos
+++ b/dockerfiles/Dockerfile.centos
@@ -13,6 +13,7 @@ WORKDIR /opt
 # install system dependencies
 RUN yum -y update && \
     yum install -y \
+    xterm \
     git \
     sudo \
     wget \
@@ -27,7 +28,8 @@ RUN yum -y update && \
     tcpdump \
     make && \
     yum-builddep -y python3 && \
-    yum autoremove -y
+    yum autoremove -y && \
+    yum install -y hostname
 
 # install python3.9
 RUN wget https://www.python.org/ftp/python/3.9.15/Python-3.9.15.tgz && \
@@ -44,7 +46,7 @@ RUN git clone https://github.com/coreemu/core && \
     cd core && \
     git checkout ${BRANCH} && \
     NO_SYSTEM=1 PYTHON=/usr/local/bin/python3.9 ./setup.sh && \
-    . /root/.bashrc && PYTHON=/usr/local/bin/python3.9 inv install -v -p ${PREFIX} --no-python
+    PATH=/root/.local/bin:$PATH PYTHON=/usr/local/bin/python3.9 inv install -v -p ${PREFIX} --no-python
 
 # install emane
 RUN wget -q https://adjacentlink.com/downloads/emane/emane-1.3.3-release-1.el7.x86_64.tar.gz && \
